# qt-wlroots

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build-arch.sh  run-nested.sh
include/: compositor_core.h  compositor_wrapper.h  embedded_view.h  output_handler.h  render_backend.h  seat_handler.h  xdg_shell_handler.h
qml/: main.qml
src/: compositor_core.c  compositor_wrapper.cpp  embedded_view.cpp  main.cpp  output_handler.c  render_backend.c  seat_handler.c  xdg_shell_handler.c
